ftrip-io/templates/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.5.8-focal
        volumeMounts:
          - name: data-volume
            mountPath: /var/lib/mysql
          - name: config-volume
            mountPath: /docker-entrypoint-initdb.d/
        resources:
          requests:
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3306
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: mariadb-pvc
        - name: config-volume
          configMap:
            name: mariadb-config
            items:
              - key: init-db-script
                path: init_dbs.sql
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 3306
