ftrip-io/templates/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: ftripio-services-ingress
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /api$2
spec:
  rules:
    - host: ftripio.isobarot.com
      http:
        paths:
          - path: /userService(/api)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /catalogService(/api)(.*)
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 80
          - path: /bookingService(/api)(.*)
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 80
          - path: /notificationService(/api)(.*)
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
          - path: /emailService(/api)(.*)
            pathType: Prefix
            backend:
              service:
                name: email-service
                port:
                  number: 80
          - path: /imageService(/api)(.*)
            pathType: Prefix
            backend:
              service:
                name: image-service
                port:
                  number: 80
  tls:
    - hosts:
        - ftripio.isobarot.com
      secretName: ftripio-prod-tls
---
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: ftripio-app-ingress
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: ftripio.isobarot.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
  tls:
    - hosts:
        - ftripio.isobarot.com
      secretName: ftripio-prod-tls
---
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: rtc-service-ingress
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/affinity-mode: persistent
spec:
  rules:
    - host: ftripio.isobarot.com
      http:
        paths:
          - path: /rtcService(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: realtime-communication-service
                port:
                  number: 80
  tls:
    - hosts:
        - ftripio.isobarot.com
      secretName: ftripio-prod-tls
