ftrip-io/templates/networks.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/monitoring: "true"
  podSelector:
    matchLabels:
      network/monitoring: "true"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/application: "true"
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "ingress"
  podSelector:
    matchLabels:
      network/application: "true"
